@@ -85,6 +85,7 @@
 					w = "(if(width < 14, 0, width - 14))"
 					h = "(if(height < 14, 0, height - 14))"
 					name = "dialogs/{BASE_NAME}-background.png"
+					resize_mode = "tile"
 				[/image]
 
 			[/draw]
