@@ -7,6 +7,8 @@ Version 1.7.11+svn:
    * Updated translations: Finnish, German, Italian, Latin, Russian,
      Shavian.
 
+ * Graphics:
+   * Improved the background for the new dialogs.
 
 Version 1.7.11-1.8beta4:
  * Language and translations:
