@@ -2,6 +2,8 @@ Version 1.7.11+svn:
  * Language and i18n:
    * Updated translations: Finnish, German, Italian, Latin, Russian,
      Shavian
+ * User interface:
+   * Switched back to the tiled background for gui2
  * Miscellaneous and bugfixes:
    * Fix scrolling during animation (bug 13106)
    * Fix drakes tipping their wings in the water when flying
